tests/baselines/reference/mappedTypeIndexedAccess.errors.txt
tests/cases/compiler/mappedTypeIndexedAccess.ts(18,5): error TS2322: Type '{ key: "foo"; value: number; }' is not assignable to type 'Pair<FooBar>'.
  Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "bar"; value: number; }'.
    Types of property 'key' are incompatible.
      Type '"foo"' is not assignable to type '"bar"'.
tests/cases/compiler/mappedTypeIndexedAccess.ts(24,5): error TS2322: Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; } | { key: "bar"; value: number; }'.
  Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "bar"; value: number; }'.
    Types of property 'key' are incompatible.
      Type '"foo"' is not assignable to type '"bar"'.


==== tests/cases/compiler/mappedTypeIndexedAccess.ts (2 errors) ====
    // Repro from #15756
    
    type Pairs<T> = {
        [TKey in keyof T]: {
            key: TKey;
            value: T[TKey];
        };
    };
    
    type Pair<T> = Pairs<T>[keyof T];
    
    type FooBar = {
        foo: string;
        bar: number;
    };
    
    // Error expected here
    let pair1: Pair<FooBar> = {
        ~~~~~
!!! error TS2322: Type '{ key: "foo"; value: number; }' is not assignable to type 'Pair<FooBar>'.
!!! error TS2322:   Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "bar"; value: number; }'.
!!! error TS2322:     Types of property 'key' are incompatible.
!!! error TS2322:       Type '"foo"' is not assignable to type '"bar"'.
        key: "foo",
        value: 3
    };
    
    // Error expected here
    let pair2: Pairs<FooBar>[keyof FooBar] = {
        ~~~~~
!!! error TS2322: Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; } | { key: "bar"; value: number; }'.
!!! error TS2322:   Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "bar"; value: number; }'.
!!! error TS2322:     Types of property 'key' are incompatible.
!!! error TS2322:       Type '"foo"' is not assignable to type '"bar"'.
        key: "foo",
        value: 3
    };
    